--- a/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG-REPORT.yml
@@ -10,13 +10,14 @@ body:
     id: description
     attributes:
       label: Describe the Bug
-      placeholder: A clear and concise description of the bug.
+      description: A clear and concise description of the bug.
     validations:
       required: true
   - type: textarea
     id: steps
     attributes:
       label: Steps to Reproduce
+      description: List each action required in order to reproduce the issue.
       placeholder: |
         1. Go to '...'
         2. Click on '...'
@@ -26,16 +27,17 @@ body:
     id: expected
     attributes:
       label: Expected Behavior
-      placeholder: A clear and concise description of what you expected to happen.
+      description: A clear and concise description of what you expected to happen.
   - type: textarea
     id: screenshots
     attributes:
       label: Screenshots
-      placeholder: Provide screenshots to help explain your problem.
+      description: Provide screenshots to help explain your problem.
   - type: textarea
     id: relevant
     attributes:
       label: Relevant Settings
+      description: Include all settings/configuration that are relevant to your issue. For example, Plex Media Server, newsletter, or notification settings.
       placeholder: |
         - eg. Plex Media Server IP address/port/checkboxes/proxy/etc.
         - eg. Notification agent configuration/triggers/conditions/text/delay/grouping/etc.
@@ -46,7 +48,7 @@ body:
     attributes:
       label: Tautulli Version
       description: Check Tautulli Settings > Help & Info page.
-      placeholder: ex. v2.7.5
+      placeholder: eg. v2.7.5
     validations:
       required: true
   - type: input
@@ -54,7 +56,7 @@ body:
     attributes:
       label: Git Branch
       description: Check Tautulli Settings > Help & Info page.
-      placeholder: ex. master
+      placeholder: eg. master
     validations:
       required: true
   - type: input
@@ -62,7 +64,7 @@ body:
     attributes:
       label: Git Commit Hash
       description: Check Tautulli Settings > Help & Info page.
-      placeholder: ex. 2cc5bf812fe05e0666aeaeb37ed550c59816fb4c
+      placeholder: eg. 2cc5bf812fe05e0666aeaeb37ed550c59816fb4c
     validations:
       required: true
   - type: input
@@ -70,7 +72,7 @@ body:
     attributes:
       label: Platform and Version
       description: Check Tautulli Settings > Help & Info page.
-      placeholder: ex. Windows 10
+      placeholder: eg. Windows 10
     validations:
       required: true
   - type: input
@@ -78,22 +80,21 @@ body:
     attributes:
       label: Python Version
       description: Check Tautulli Settings > Help & Info page.
-      placeholder: ex. 3.8.10
+      placeholder: eg. 3.8.10
     validations:
       required: true
   - type: input
     id: browser
     attributes:
       label: Browser and Version
-      placeholder: ex. Chrome 88
+      placeholder: eg. Chrome 88
     validations:
       required: true
   - type: input
     id: logs
     attributes:
-      label: Link to logs
-      description: Include a link to your **FULL** logs (not just a few lines) on [Gist](http://gist.github.com). _Do not upload attachments_.
-      placeholder: Gist link to logs
+      label: Link to Logs
+      description: Include a link to your **FULL** logs (not just a few lines) on [Gist](http://gist.github.com).
     validations:
       required: true
   - type: markdown
