--- a/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
@@ -10,22 +10,22 @@ body:
     id: problem
     attributes:
       label: Is your feature request related to a problem?
-      description: If so, please describe the problem.
-      placeholder: A clear and concise description of what the problem (if any) is. Ex. I'm always frustrated when '...'
+      description: If so, please provide clear and concise description of the problem.
+      placeholder: eg. I'm always frustrated when '...'
   - type: textarea
     id: feature
     attributes:
       label: What is your feature request?
-      placeholder: A clear and concise description of the feature.
+      description: A clear and concise description of the feature.
     validations:
       required: true
   - type: textarea
     id: workaround
     attributes:
       label: Are there any workarounds?
-      placeholder: A clear and concise description of any alternative solutions or features you've considered.
+      description: A clear and concise description of any alternative solutions or features you've considered.
   - type: textarea
     id: additional
     attributes:
       label: Additional Context
-      placeholder: Add any other context or screenshots about the feature request here.
+      description: Add any other context or screenshots about the feature request here.
