--- a/.github/workflows/issues-stale.yml
+++ b/.github/workflows/issues-stale.yml
@@ -25,7 +25,7 @@ jobs:
           close-pr-message: >
             This PR was closed because it has been stalled for 5 days with no activity.
           stale-pr-label: 'stale'
-          exempt-pr-labels: 'status:in-progress'
+          exempt-pr-labels: 'status:in-progress,dependencies'
           days-before-stale: 30
           days-before-close: 5
 
@@ -43,7 +43,7 @@ jobs:
           close-pr-message: >
             This PR was closed because the the template was not completed after 5 days.
           stale-pr-label: 'invalid:template-incomplete'
-          exempt-pr-labels: 'status:in-progress'
+          exempt-pr-labels: 'status:in-progress,dependencies'
           skip-stale-pr-message: true
           only-labels: 'invalid:template-incomplete'
           days-before-stale: 0
