--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,13 @@ __pycache__
 *.ini
 release.lock
 version.lock
+lib/*.dist-info
+lib/*.egg-info
+lib/*.pth
+lib/*/*.pyd
+lib/_distutils_hack
+lib/pkg_resources
+lib/setuptools
 logs/*
 backups/*
 cache/*
