--- a/requirements.txt
+++ b/requirements.txt
@@ -51,5 +51,5 @@ xmltodict==0.12.0
 zipp==3.6.0
 
 # configobj==5.1.0
-# infi.systray==0.1.12
 # sgmllib3k==1.0.0
+# git+https://github.com/JonnyWong16/infi.systray.git@develop#egg=infi.systray
