Update added issues label action message
[skip ci]

--- a/.github/label-actions.yml
+++ b/.github/label-actions.yml
@@ -3,6 +3,7 @@
 added:
   comment: >
     This feature has been added and will be available in the next release of Tautulli.
+    This issue will be automatically closed once the update is available.
 
 fixed:
   comment: >
