--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cheroot==8.5.2
 cherrypy==18.6.1
 cloudinary==1.26.0
 distro==1.6.0
-dnspython==2.1.0
+dnspython==2.0.0  # ipwhois requires dnspython<=2.0.0
 facebook-sdk==3.1.0
 future==0.18.2
 gntp==1.0.3
@@ -44,7 +44,7 @@ soupsieve==2.2.1
 tempora==4.1.2
 tokenize-rt==4.1.0
 tzdata==2021.2.post0
-tzlocal<3.0
+tzlocal==4.1
 urllib3==1.26.7
 webencodings==0.5.1
 websocket-client==1.2.1
