Fix screen rotation in PWA
* Fixes #1633

--- a/data/interfaces/default/images/favicon/manifest.json
+++ b/data/interfaces/default/images/favicon/manifest.json
@@ -18,6 +18,5 @@
     ],
     "theme_color": "#282a2d",
     "background_color": "#282a2d",
-    "display": "standalone",
-    "orientation": "any"
+    "display": "standalone"
 }
