--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ PyJWT==2.3.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
 python-twitter==3.5
-pytz==2021.3
+pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 rumps==0.3.0; platform_system == "Darwin"
@@ -42,8 +42,8 @@ six==1.16.0
 soupsieve==2.3.1
 tempora==5.0.1
 tokenize-rt==4.2.1
-tzdata==2021.5
-tzlocal==2.1  # apscheduler==3.9.1 requires tzlocal~=2.0
+tzdata==2022.1
+tzlocal==4.2
 urllib3==1.26.8
 webencodings==0.5.1
 websocket-client==1.2.3
