--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,12 @@ gntp==1.0.3
 html5lib==1.1
 httpagentparser==1.9.2
 idna==3.3
+importlib-metadata==4.11.3
 importlib-resources==5.6.0
 git+https://github.com/Tautulli/ipwhois.git@master#egg=ipwhois
 IPy==1.01
 Mako==1.2.0
-MarkupSafe==2.0.1
+MarkupSafe==2.1.1
 musicbrainzngs==0.7.1
 packaging==21.3
 paho-mqtt==1.6.1
