--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ requests-oauthlib==1.3.1
 rumps==0.3.0; platform_system == "Darwin"
 simplejson==3.17.6
 six==1.16.0
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
 tempora==5.0.1
 tokenize-rt==4.2.1
 tzdata==2022.1
