--- a/.github/workflows/publish-installers.yml
+++ b/.github/workflows/publish-installers.yml
@@ -33,14 +33,14 @@ jobs:
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
             VERSION_NSIS=${GITHUB_REF#refs/tags/v}.1
-            echo ::set-output name=VERSION_NSIS::${VERSION_NSIS/%-beta.1/.0}
-            echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
-            echo ::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/tags/}
+            echo "VERSION_NSIS=${VERSION_NSIS/%-beta.1/.0}" >> $GITHUB_OUTPUT
+            echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+            echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
           else
             echo "VERSION=0.0.0" >> $GITHUB_ENV
-            echo ::set-output name=VERSION_NSIS::0.0.0.0
-            echo ::set-output name=VERSION::0.0.0
-            echo ::set-output name=RELEASE_VERSION::${GITHUB_SHA::7}
+            echo "VERSION_NSIS=0.0.0.0" >> $GITHUB_OUTPUT
+            echo "VERSION=0.0.0" >> $GITHUB_OUTPUT
+            echo "RELEASE_VERSION::${GITHUB_SHA=7}" >> $GITHUB_OUTPUT
           fi
           if [[ $GITHUB_REF == refs/tags/*-beta ]]; then
             echo "beta" > branch.txt
@@ -108,7 +108,7 @@ jobs:
       - name: Set Release Version
         id: get_version
         run: |
-          echo ::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/tags/}
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
       - name: Download Installers
         if: env.WORKFLOW_CONCLUSION == 'success'
@@ -117,7 +117,7 @@ jobs:
       - name: Get Changelog
         id: get_changelog
         run: |
-          echo ::set-output name=CHANGELOG::"$( sed -n '/^## /{p; :loop n; p; /^## /q; b loop}' CHANGELOG.md \
+          echo "CHANGELOG="$( sed -n '/^## /{p; :loop n; p; /^## /q; b loop}' CHANGELOG.md \" >> $GITHUB_OUTPUT
             | sed '$d' | sed '$d' | sed '$d' | sed ':a;N;$!ba;s/\n/%0A/g' )"
 
       - name: Create Release
@@ -171,9 +171,9 @@ jobs:
         run: |
           failures=(neutral, skipped, timed_out, action_required)
           if [[ ${array[@]} =~ $WORKFLOW_CONCLUSION ]]; then
-            echo ::set-output name=status::failure
+            echo "status=failure" >> $GITHUB_OUTPUT
           else
-            echo ::set-output name=status::$WORKFLOW_CONCLUSION
+            echo "status=$WORKFLOW_CONCLUSION" >> $GITHUB_OUTPUT
           fi
 
       - name: Post Status to Discord
