Update winget workflow token
[skip ci]

--- a/.github/workflows/submit-winget.yml
+++ b/.github/workflows/submit-winget.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Submit package to Windows Package Manager Community Repository
         run: |
           $wingetPackage = "Tautulli.Tautulli"
-          $gitToken = "${{ secrets.GITHUB_TOKEN }}"
+          $gitToken = "${{ secrets.WINGET_TOKEN }}"
 
           $github = Invoke-RestMethod -uri "https://api.github.com/repos/Tautulli/Tautulli/releases/latest"
           $installerUrl = $github | Select -ExpandProperty assets -First 1 | Where-Object -Property name -match "Tautulli-windows-.*-x64.exe" | Select -ExpandProperty browser_download_url
