--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ apscheduler==3.9.1.post1
 arrow==1.2.3
 backports.csv==1.0.7
 backports.functools-lru-cache==1.6.4
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 beautifulsoup4==4.11.1
 bleach==5.0.1
 certifi==2022.12.7
