--- a/.github/workflows/submit-winget.yml
+++ b/.github/workflows/submit-winget.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   winget:
-    name: Publish Winget Package
+    name: Submit Winget Package
     runs-on: windows-latest
     steps:
       - name: Submit package to Windows Package Manager Community Repository
