Update snap to core22
* Fixes #1941

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,7 +7,7 @@ description: >
   The only thing missing is "why they watched it", but who am I to question your 42 plays of Frozen. 
   All statistics are presented in a nice and clean interface with many tables and graphs, which makes it easy to brag about your server to everyone else.
 
-base: core18
+base: core22
 confinement: strict
 
 architectures:
@@ -20,12 +20,18 @@ parts:
     plugin: dump
     source: .
     stage-packages:
-      - python3.8
+      - python3
       - python3-openssl
       - python3-pycryptodome
       - python3-setuptools
+      - python3-pkg-resources
     build-packages:
       - git
+      - python3
+      - python3-openssl
+      - python3-pycryptodome
+      - python3-setuptools
+      - python3-pkg-resources
     override-pull: |
       snapcraftctl pull
       git config --global --add safe.directory /data/parts/tautulli/src
@@ -52,15 +58,14 @@ parts:
       echo $COMMIT > version.txt
       snapcraftctl set-version "$VERSION"
       snapcraftctl set-grade "$GRADE"
+    override-prime: |
+      snapcraftctl prime
+      mkdir -p usr/bin
+      ln -s /usr/bin/python3 usr/bin/python3
 
 apps:
   tautulli:
-    command: >
-      usr/bin/python3 $SNAP/Tautulli.py
-        --datadir $SNAP_USER_COMMON/Tautulli
-        --config $SNAP_USER_COMMON/Tautulli/config.ini
-        --quiet
-        --nolaunch
+    command: usr/bin/python3 $SNAP/Tautulli.py --datadir $SNAP_USER_COMMON/Tautulli --config $SNAP_USER_COMMON/Tautulli/config.ini --quiet --nolaunch
     daemon: simple
     restart-condition: on-abnormal
     restart-delay: 5s
@@ -70,4 +75,5 @@ apps:
       - network-bind
       - removable-media
     environment:
+      PYTHONPATH: $SNAP/usr/lib/python3/dist-packages:$PYTHONPATH
       TAUTULLI_SNAP: "True"
