Don't submit to winget for pre-release (beta)
[skip ci]

--- a/.github/workflows/submit-winget.yml
+++ b/.github/workflows/submit-winget.yml
@@ -9,6 +9,7 @@ jobs:
   winget:
     name: Submit Winget Package
     runs-on: windows-latest
+    if: !github.event.release.prerelease
     steps:
       - name: Submit package to Windows Package Manager Community Repository
         run: |
