--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-appdirs==1.4.4
 apscheduler==3.10.1
 arrow==1.2.3
 backports.csv==1.0.7
@@ -28,6 +27,7 @@ MarkupSafe==2.1.3
 musicbrainzngs==0.7.1
 packaging==23.1
 paho-mqtt==1.6.1
+platformdirs==3.11.0
 plexapi==4.15.4
 portend==3.2.0
 profilehooks==1.12.0
