--- a/.github/workflows/publish-installers.yml
+++ b/.github/workflows/publish-installers.yml
@@ -6,10 +6,13 @@ on:
     branches: [master, beta, nightly]
     tags: [v*]
 
+env:
+  PYTHON_VERSION: '3.11'
+
 jobs:
   build-installer:
     name: Build ${{ matrix.os_upper }} Installer
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ${{ matrix.os }}-${{ matrix.os_version }}
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     strategy:
       fail-fast: false
@@ -17,9 +20,13 @@ jobs:
         include:
           - os: 'windows'
             os_upper: 'Windows'
+            os_version: 'latest'
+            arch: 'x64'
             ext: 'exe'
           - os: 'macos'
             os_upper: 'MacOS'
+            os_version: '14'
+            arch: 'universal'
             ext: 'pkg'
 
     steps:
@@ -54,14 +61,14 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: ${{ env.PYTHON_VERSION }}
           cache: pip
           cache-dependency-path: '**/requirements*.txt'
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r package/requirements-package.txt
+          pip install -r package/requirements-package.txt --no-binary cffi
 
       - name: Build Package
         run: |
@@ -74,7 +81,7 @@ jobs:
           script-file: ./package/Tautulli.nsi
           arguments: >
             /DVERSION=${{ steps.get_version.outputs.VERSION_NSIS }}
-            /DINSTALLER_NAME=..\Tautulli-windows-${{ steps.get_version.outputs.RELEASE_VERSION }}-x64.exe
+            /DINSTALLER_NAME=..\Tautulli-${{ matrix.os }}-${{ steps.get_version.outputs.RELEASE_VERSION }}-${{ matrix.arch }}.${{ matrix.ext }}
           additional-plugin-paths: package/nsis-plugins
 
       - name: Create MacOS Installer
@@ -85,13 +92,13 @@ jobs:
             --version ${{ steps.get_version.outputs.VERSION }} \
             --component ./dist/Tautulli.app \
             --scripts ./package/macos-scripts \
-            Tautulli-macos-${{ steps.get_version.outputs.RELEASE_VERSION }}-x64.pkg
+            Tautulli-${{ matrix.os }}-${{ steps.get_version.outputs.RELEASE_VERSION }}-${{ matrix.arch }}.${{ matrix.ext }}
 
       - name: Upload Installer
         uses: actions/upload-artifact@v4
         with:
           name: Tautulli-${{ matrix.os }}-installer
-          path: Tautulli-${{ matrix.os }}-${{ steps.get_version.outputs.RELEASE_VERSION }}-x64.${{ matrix.ext }}
+          path: Tautulli-${{ matrix.os }}-${{ steps.get_version.outputs.RELEASE_VERSION }}-${{ matrix.arch }}.${{ matrix.ext }}
 
   release:
     name: Release Installers
