--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -33,7 +33,6 @@ jobs:
             echo "branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
           fi
           echo "commit=${GITHUB_SHA}" >> $GITHUB_OUTPUT
-          echo "build_date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
           echo "docker_platforms=linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v6" >> $GITHUB_OUTPUT
           echo "docker_image=${{ secrets.DOCKER_REPO }}/tautulli" >> $GITHUB_OUTPUT
 
@@ -59,7 +58,7 @@ jobs:
         if: success()
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -68,6 +67,12 @@ jobs:
           registry: ghcr.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Extract Docker Metadata
+        id: metadata
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ steps.prepare.outputs.docker_image }}
 
       - name: Docker Build and Push
         uses: docker/build-push-action@v6
@@ -81,10 +86,10 @@ jobs:
             TAG=${{ steps.prepare.outputs.tag }}
             BRANCH=${{ steps.prepare.outputs.branch }}
             COMMIT=${{ steps.prepare.outputs.commit }}
-            BUILD_DATE=${{ steps.prepare.outputs.build_date }}
           tags: |
             ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.tag }}
             ghcr.io/${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.tag }}
+          labels: ${{ steps.metadata.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 
