Add Github token to release virus scan

--- a/.github/workflows/submit-winget.yml
+++ b/.github/workflows/submit-winget.yml
@@ -32,6 +32,7 @@ jobs:
         uses: crazy-max/ghaction-virustotal@v4
         with:
           vt_api_key: ${{ secrets.VT_API_KEY }}
+          github_token: ${{ secrets.GHACTIONS_TOKEN }}
           update_release_body: true
           files: |
             .exe$
