--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ apscheduler==3.10.1
 arrow==1.3.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
+boto3==1.35.16
 certifi==2024.8.30
 cheroot==10.0.1
 cherrypy==18.10.0
