feat: Updated requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-apscheduler==3.10.1
+APScheduler==3.10.1
 arrow==1.3.0
+autocommand==2.2.2
+backports.tarfile==1.2.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
-boto3==1.35.16
+boto3==1.35.99
+botocore==1.35.99
 certifi==2024.8.30
+charset-normalizer==3.4.2
 cheroot==10.0.1
-cherrypy==18.10.0
+CherryPy==18.10.0
 cherrypy-cors==1.7.0
 cloudinary==1.41.0
 distro==1.9.0
@@ -17,39 +21,48 @@ gntp==1.0.3
 html5lib==1.1
 httpagentparser==1.9.5
 idna==3.10
-importlib-metadata==8.5.0
-importlib-resources==6.4.5
-git+https://github.com/Tautulli/ipwhois.git@master#egg=ipwhois
-IPy==1.01
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+ipwhois @ git+https://github.com/Tautulli/ipwhois.git@5a518cd86012acfae0c2dcb1663ae1b4c24bac95
+IPy==1.1
+jaraco.collections==5.1.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jaraco.text==4.0.0
+jmespath==1.0.1
 Mako==1.3.6
 MarkupSafe==3.0.2
+more-itertools==10.7.0
 musicbrainzngs==0.7.1
+oauthlib==3.2.2
 packaging==24.2
 paho-mqtt==2.1.0
 platformdirs==4.3.6
-plexapi==4.16.1
+PlexAPI==4.16.1
 portend==3.2.0
 profilehooks==1.13.0
 PyJWT==2.10.1
+pyobjc-core==11.0
+pyobjc-framework-Cocoa==11.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-twitter==3.5
 pytz==2024.2
 requests==2.32.3
 requests-oauthlib==2.0.0
-rumps==0.4.0; platform_system == "Darwin"
+rumps==0.4.0
+s3transfer==0.10.4
 simplejson==3.19.3
 six==1.16.0
+soupsieve==2.7
 tempora==5.7.0
-tokenize-rt==6.1.0
+tokenize_rt==6.1.0
+types-python-dateutil==2.9.0.20241206
 tzdata==2024.2
 tzlocal==5.0.1
-urllib3<2
+urllib3==1.26.20
 webencodings==0.5.1
 websocket-client==1.8.0
 xmltodict==0.14.2
+zc.lockfile==3.0.post1
 zipp==3.21.0
-
-# configobj==5.1.0
-# sgmllib3k==1.0.0
-# git+https://github.com/JonnyWong16/infi.systray.git@develop#egg=infi.systray
